# project-murmur

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RTK.md  pyproject.toml  run.bat
.claude/: launch.json
.github/workflows/: ci.yml
crates/murmur-campaign/: Cargo.toml
crates/murmur-campaign/src/: lib.rs
crates/murmur-cli/: Cargo.toml
crates/murmur-cli/src/: main.rs
crates/murmur-core/: Cargo.toml
crates/murmur-core/examples/: bench_gen.rs  dump_map.rs  forecast_decay.rs  loss_attribution.rs  probe.rs
crates/murmur-core/src/: access.rs  actions.rs  ai.rs  autoplay.rs  contract.rs  data.rs  geom.rs  lib.rs  loc.rs  map.rs  path.rs  perception.rs  planner.rs  replay.rs  rng.rs  turn.rs  world.rs
crates/murmur-core/src/actions/: bodies.rs  doors.rs  interact.rs  lead.rs  mod.rs  movement.rs  theft.rs  violence.rs
crates/murmur-core/src/autoplay/: forecast.rs  mod.rs
crates/murmur-core/src/generator/: district.rs  grammar.rs  layout.rs  mod.rs  objective.rs  opportunities.rs  populate.rs  proof.rs  schedule.rs
crates/murmur-core/tests/: cheats.rs  command_shape.rs  contracts.rs  equipment.rs  escort.rs  gameplay.rs  golden.rs  heat.rs  objectives.rs  opportunities.rs  playthrough.rs  replay_contract.rs  rng_trace.rs  share_codes.rs  verbs.rs  warehouse.rs
crates/murmur-core/tests/common/: mod.rs
crates/murmur-core/tests/fixtures/: command_shape.txt  golden.txt  rng_trace.txt
crates/murmur-native/: Cargo.toml
crates/murmur-native/src/: main.rs
crates/murmur-shell/: Cargo.toml
crates/murmur-shell/examples/: screenshot.rs
crates/murmur-shell/src/: availability.rs  fov.rs  hitmap.rs  inspect.rs  keymap.rs  lib.rs  mission.rs  queue.rs  render.rs  screens.rs
crates/murmur-web/: Cargo.toml  Trunk.toml  index.html  ratzilla.crate
crates/murmur-web/ratzilla-0.3.1/: .cargo_vcs_info.json
crates/murmur-web/src/: main.rs
data/: briefing.ron  campaign.ron  disguises.ron  equipment.ron  items.ron  names.ron  opportunities.ron  population.ron  rooms.ron  tuning.ron  venues.ron
data/loc/: .~lock.strings.csv#  strings.csv
docs/architecture/: foundation.md
pasm/: README.md
pasm/spec/: README.md
pasm/spec/core/: decisions.yaml  foundation.yaml
pasm/spec/milestones/: milestone-2.yaml  milestone-3.yaml  milestone-4.yaml  milestone-5.yaml  milestone-6.yaml
pasm/spec/roadmap/: long-term-wishlist.yaml
