[package]
name = "murmur-native"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Native Bevy executable with a terminal presentation backend."

[dependencies]
murmur-core = { workspace = true }
murmur-shell = { workspace = true }
ratatui = { workspace = true, features = ["crossterm"] }
bevy = { version = "0.18", default-features = false }
bevy_ratatui = "0.11"

[lints.rust]
unsafe_code = "forbid"
