[package]
name = "murmur-web"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "WebAssembly delivery of Project Murmur via Ratzilla."

[dependencies]
murmur-core = { workspace = true }
murmur-campaign = { workspace = true }
murmur-shell = { workspace = true }
ratzilla = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# ratatui-core relies on the critical-section crate, which needs a provider
# on wasm32-unknown-unknown; the std implementation is the right one for a
# single-threaded browser main thread.
critical-section = { version = "1", features = ["std"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "KeyboardEvent", "EventTarget", "Storage"] }

[lints.rust]
unsafe_code = "forbid"
